--- a/spa1/src/components/styles/Main.css
+++ b/spa1/src/components/styles/Main.css
@@ -1,10 +1,13 @@
 .Main {
-    background-color: #fff;
+    background-color: hwb(187 90% 0%);
     border-radius: 4px;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 4px #0000004d;
     margin: 0 auto;
     max-width: 600px;
     padding: 20px;
     width: 100%;
     text-align: left;
     }
+.card-title {
+    color:aliceblue;
+}
