--- a/spa1/src/components/styles/Main.css
+++ b/spa1/src/components/styles/Main.css
@@ -1,5 +1,5 @@
 .Main {
-    background-color: hwb(187 90% 0%);
+    /* background-color: hwb(187 90% 0%); */
     border-radius: 4px;
     box-shadow: 0 0 4px #0000004d;
     margin: 0 auto;
