--- a/spa1/src/index.css
+++ b/spa1/src/index.css
@@ -2,6 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: rgb(0,0,0);
-  background: linear-gradient(34deg, rgba(0,0,0,1) 0%, rgba(9,9,121,1) 35%, rgba(0,221,255,0.6601234243697479) 100%);
+  /* background: rgb(0,0,0); */
+  /* background: linear-gradient(34deg, rgba(0,0,0,1) 0%, rgba(9,9,121,1) 35%, rgba(0,221,255,0.6601234243697479) 100%); */
 }
