--- a/spa1/src/components/navigation/Navigation.css
+++ b/spa1/src/components/navigation/Navigation.css
@@ -15,17 +15,17 @@
 }
 
 .FooterNav{
-    justify-content: space-between;
-    align-items: center;
+    /* justify-content: space-between; */
+    /* align-items: center; */
     background-color: #333;
     color: #fff;
-    padding: 10px;
+    /* padding: 10px; */
     font-size: 1.2rem;
     font-weight: bold;
-    height: 100%;
+    /* height: 10px; */
     width: 100%;
-    /* position: fixed; */
+    position: static;
     bottom: 0;
     left: 0;
-    z-index: 100;
+    z-index: 1;
 }
